2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fix warnings.
	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: No refactoring
	  commands for unsaved documents. Better than a crash.
	* MonoDevelop.Ide.Gui/ConfigurationComboBox.cs: Removed debug message.
	* MonoDevelop.Ide.Gui.Search/SearchReplaceManager.cs: ShowMessage
	  requires escaped text.

2007-07-17  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs: New OptionPanel
	to allow customizing key bindings.

2007-07-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorExtension.cs: When showing the
	  completion window with ctrl+space, calculate the length of the text
	  to be replaced and store it in the completion context. Fixes bug
	  #82033.

2007-07-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fixed bug
	  81349:double-click src tab => maximize.

2007-07-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Fixed bug 82073: Window
	  panes vanish permanently

2007-07-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/HelpViewer.cs: Don't crash if Gtk.HTML can't be
	  loaded. Fixes bug #81989.

2007-07-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Worked on Bugzilla Bug
	  81349. (toolbars and status bar are now shown).

2007-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CodeDomFileDescriptionTemplate.cs,