@@ -300,6 +300,8 @@
     <File name="./MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Ide.CodeTemplates/EditTemplateGroupDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Ide.Gui.Pads/ILocationListPad.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MonoDevelop.Ide.Gui/InternalLog.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs" subtype="Code" buildaction="Compile" />
   </Contents>
@@ -338,13 +340,6 @@
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
   </References>
-  <GtkDesignInfo partialTypes="True">
-    <ExportedWidgets>
-      <Widget>MonoDevelop.Ide.Gui.Dialogs.CombineEntryFeatureSelector</Widget>
-      <Widget>MonoDevelop.Ide.StandardHeaders.StandardHeaderPanel</Widget>
-      <Widget>MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel</Widget>
-    </ExportedWidgets>
-  </GtkDesignInfo>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../../">
     <ExcludedFiles>
       <File>./AssemblyInfo.cs</File>
@@ -357,6 +352,13 @@
     <AsmRefVar Sync="True" Name="REFS" Prefix="-r:" />
     <ProjectRefVar Sync="True" Name="REFS" Prefix="-r:" />
   </MonoDevelop.Autotools.MakefileInfo>
+  <GtkDesignInfo partialTypes="True">
+    <ExportedWidgets>
+      <Widget>MonoDevelop.Ide.Gui.Dialogs.CombineEntryFeatureSelector</Widget>
+      <Widget>MonoDevelop.Ide.StandardHeaders.StandardHeaderPanel</Widget>
+      <Widget>MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel</Widget>
+    </ExportedWidgets>
+  </GtkDesignInfo>
   <MonoDevelop.Gettext.TranslationInfo />
   <DeploymentInformation strategy="File">
     <excludeFiles />
