@@ -1,5 +1,16 @@
 2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs,
+	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp, Makefile.am,
+	  MonoDevelop.Ide.Gui/InternalLog.cs, MonoDevelop.Ide.Gui/Ide.cs:
+	  Implemented a pad which shows the log messages generated by
+	  MonoDevelop.
+	* MonoDevelop.Ide.Gui/IdeStartup.cs: If the inotify watch handle limit
+	  is too low, switch to managed watcher, to make sure watching works
+	  even if it is slow.
+
+2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
 	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
 	  MonoDevelop.Ide.Gui.Dialogs/EncapsulateFieldDialog.cs,
